src/main/java/semantic/symbolTable/test/failing/redefinedAttribute.ru
/? RedefinedVariableException
struct A {
    pri Int a;
    Int a;
}

/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 4 | 9 | Variable redefinida: a |